bench: Gatling load tests for the sidecar, and a Scala Native + cats-effect rival
Two questions, deliberately kept apart: how fast is the sidecar we ship, and
would a Scala Native + cats-effect implementation be competitive.

`bench/` drives the real Rust `obsd` over real gRPC using Gatling's FIRST-PARTY
`gatling-grpc` module. `sidecar-scala/` is the comparison: the same
`oblivious-sidecar/proto` contract (no copy), the same store semantics, one
source tree linked for BOTH the JVM and Scala Native, so the pair isolates the
runtime with everything else held constant.

Results (macOS arm64, 5 users, 30s, capacity 4096) — obsd 15,346 rps / p99 1ms;
Scala JVM 10,840 rps / p99 1ms; Scala Native 2,410 rps / p99 3ms; zero failures
anywhere. Full caveats in bench/README.md.

THREE THINGS THAT WOULD HAVE MADE THE NUMBERS A LIE, all now pinned in the build:

- Scala Native's link defaults. The first run said 561 rps, because the default
  link is a DEBUG build and auto-detects threading — it saw no Thread use during
  class loading and linked a SINGLE-THREADED binary, so a cats-effect server ran
  on one core against a JVM using all of them. releaseFast + multithreading +
  the parallel commix GC: 4.3x from link flags alone.
- gatling-grpc is trial-licensed. Above 5 virtual users it warns, shuts the run
  down and exits non-zero having recorded NOTHING — indistinguishable from a
  server refusing every connection. The simulation now `require`s the cap up
  front and run-all.sh skips the Rust run rather than pretend, if you raise it.
- http4s-grpc answers a FAILED call with HTTP 200 and an empty body, putting the
  error in a grpc-status trailer Gatling's HTTP client never surfaces. A
  status-only check would report a flawless run against a server rejecting
  everything; the simulation also requires a non-empty body.

WHY THE TWO SIMULATIONS DO NOT SHARE A TRANSPORT. fs2-grpc wraps grpc-java and
is JVM-only, so http4s-grpc — pure Scala, cross-published for Native — is the
onl