@@ -346,8 +346,251 @@ lazy val transport = (project in file("transport"))
     ) ++ testDeps
   )
 
+// =================================================================================================
+// BENCHMARK: sidecar-scala (JVM + Scala Native) and the Gatling load driver.
+//
+// NOT A PRODUCT. `sidecar-scala` exists to answer "how does a Scala Native + cats-effect
+// implementation of the oblivious store compare with the Rust one under load". It carries NO
+// privacy claim and is not a deployment target: its constant-time conditional-assign primitives
+// are hand-written integer arithmetic, because neither the JVM nor Scala Native offers anything
+// like Rust's `subtle` crate, and nothing stops HotSpot or LLVM from reintroducing a branch. The
+// Rust sidecar remains the only implementation the metadata-privacy argument rests on.
+//
+// It reads the SAME `oblivious-sidecar/proto/*.proto` as the Rust build — one contract, no copy.
+//
+// gRPC via http4s-grpc, NOT fs2-grpc: fs2-grpc wraps grpc-java and is therefore JVM-only, while
+// http4s-grpc is a pure-Scala implementation on http4s and cross-publishes for Native.
+
+// The codegen both targets share: ScalaPB for the MESSAGES (grpc = false — http4s-grpc emits its
+// own stubs) plus the http4s-grpc generator for the SERVICES. Both run SANDBOXED, the same way
+// and for the same reason as `transport`'s ScalaPB generator (see project/plugins.sbt): these are
+// _2.12/_2.13 modules that cannot share a classloader with sbt-protoc's protoc-bridge_3.
+//
+// WHY the http4s-grpc generator runs OUT OF PROCESS while ScalaPB's runs sandboxed in-process.
+//
+// `http4s-grpc-generator` publishes for Scala 2.12 ONLY (it is consumed by an sbt 1.x plugin).
+// protoc-bridge's `SandboxedJvmGenerator` does not fully isolate `scala-library`: the sandbox
+// inherits sbt 2's 2.13 one, so the 2.12-compiled generator dies with
+//   NoSuchMethodError: scala.collection.JavaConverters$.asScalaBufferConverter
+// (that method exists in 2.12 and was removed in 2.13). Pinning ScalaPB's own generator to _2.12
+// to match does NOT help — it just moves the failure onto the ScalaPB target, since the leaked
+// 2.13 library is the thing that breaks either 2.12 generator. Verified both ways.
+//
+// A protoc plugin is only a program that reads a CodeGeneratorRequest on stdin and writes a
+// CodeGeneratorResponse on stdout, so running it in its own JVM with its own 2.12 classpath
+// sidesteps the leak entirely. `sbt-http4s-grpc` (which would normally do this wiring) has no sbt 2
+// build, hence doing it by hand here.
+//
+// The classpath is resolved by SBT, through a hidden ivy configuration — not by shelling out to
+// coursier — so codegen needs nothing on PATH beyond a JDK and stays pinned by V.http4sGrpc.
+lazy val Http4sGrpcGen = config("http4sGrpcGen").hide
+
+// A plain function, not a settingKey[File]: sbt 2 rejects `File` as a cached task's output type,
+// and a File-typed key in this position trips the same check. Both the writer task and
+// `sidecarPbTargets` derive the path from `target` through this.
+def http4sGrpcPluginPath(t: File): File = t / "protoc-gen-http4s-grpc"
+
+// Unit, not File: sbt 2 caches task results and rejects `File`/`Path` as an output type. The
+// script's location is the SETTING above, so nothing needs this task to return it.
+lazy val http4sGrpcPlugin = taskKey[Unit](
+  "Writes a launcher script that runs the http4s-grpc protoc plugin in its own JVM (2.12 classpath)."
+)
+
+lazy val http4sGrpcPluginSettings = Seq(
+  ivyConfigurations += Http4sGrpcGen,
+  libraryDependencies +=
+    ("org.http4s" % "http4s-grpc-generator_2.12" % V.http4sGrpc % Http4sGrpcGen.name),
+  // `Def.uncached`: sbt 2 type-checks a redefined task's output for cacheability, and
+  // `PB.generate` returns `Seq[File]`, which it rejects. We are only bolting a dependency onto an
+  // existing task, so opting its result out of the cache is exactly right. (The error sbt reports
+  // for this points at an unrelated line — it was isolated by deleting this one line.)
+  Compile / PB.generate := Def.uncached((Compile / PB.generate).dependsOn(http4sGrpcPlugin).value),
+  // `PB.targets` is a SETTING, so it cannot read a task's result — the script's location has to be
+  // knowable without running anything, and `PB.generate` is made to depend on the task that
+  // actually writes it (below).
+  http4sGrpcPlugin := {
+    val cp = update.value
+      .select(configurationFilter(Http4sGrpcGen.name))
+      .map(_.getAbsolutePath)
+      .mkString(java.io.File.pathSeparator)
+    val script = http4sGrpcPluginPath(target.value)
+    val javaBin = sys.props.getOrElse("java.home", "") + "/bin/java"
+    // `exec` so protoc signals the JVM directly; stderr is left alone (the generator prints
+    // protobuf's sun.misc.Unsafe warnings there, and protoc only reads stdout).
+    val body =
+      s"""|#!/bin/sh
+          |exec "$javaBin" -cp "$cp" org.http4s.grpc.generator.Http4sGrpcCodeGenerator "$$@"
+          |""".stripMargin
+    IO.write(script, body)
+    script.setExecutable(true): Unit
+  }
+)
+
+lazy val sidecarPbTargets = Def.setting(
+  Seq(
+    Target(
+      SandboxedJvmGenerator.forModule(
+        "scala",
+        Artifact("com.thesamet.scalapb", "compilerplugin_2.13", V.scalapb),
+        "scalapb.ScalaPbCodeGenerator$",
+        Nil
+      ),
+      (Compile / sourceManaged).value / "scalapb",
+      Nil // no "grpc" option: http4s-grpc generates the service stubs itself
+    ),
+    Target(
+      protocbridge.gens.plugin("http4s-grpc", http4sGrpcPluginPath(target.value).getAbsolutePath),
+      (Compile / sourceManaged).value / "http4s-grpc",
+      Nil
+    )
+  )
+)
+
+// One contract for the Rust sidecar AND both Scala targets.
+lazy val sidecarProtoSources = Def.setting(Seq(file("oblivious-sidecar") / "proto"))
+
+lazy val sidecarScalaSharedSources = Def.setting(
+  Seq(file("sidecar-scala") / "shared" / "src" / "main" / "scala")
+)
+
+// The JVM build. Same sources as the Native one — the point of the pair is that the ONLY
+// difference measured is the runtime underneath.
+lazy val sidecarScala = (project in file("sidecar-scala"))
+  .settings(http4sGrpcPluginSettings)
+  .settings(
+    name := "sidecar-scala",
+    scalacOptions ++= Seq("-deprecation", "-feature"), // codegen output trips -Wunused
+    Compile / PB.protoSources := sidecarProtoSources.value,
+    Compile / PB.targets := sidecarPbTargets.value,
+    Compile / unmanagedSourceDirectories := sidecarScalaSharedSources.value,
+    Test / unmanagedSourceDirectories := Seq(
+      file("sidecar-scala") / "shared" / "src" / "test" / "scala"
+    ),
+    libraryDependencies ++= Seq(
+      "com.thesamet.scalapb" %% "scalapb-runtime" % V.scalapb % "protobuf",
+      "com.thesamet.scalapb" %% "scalapb-runtime" % V.scalapb,
+      "org.http4s" %% "http4s-grpc" % V.http4sGrpc,
+      "org.http4s" %% "http4s-ember-server" % V.http4s,
+      "org.http4s" %% "http4s-ember-client" % V.http4s,
+      "org.typelevel" %% "log4cats-noop" % V.log4cats,
+      "org.typelevel" %% "cats-effect" % V.catsEffect,
+      "org.scalameta" %% "munit" % V.munit % Test,
+      "org.typelevel" %% "munit-cats-effect" % V.munitCatsEffect % Test
+    ),
+    Test / testFrameworks := Seq(new TestFramework("munit.Framework")),
+    run / fork := true,
+    // Writes the runtime classpath to a file so `bench/run-all.sh` can start the JVM server with a
+    // plain `java -cp`, the same way it starts the Rust and Native binaries — rather than holding an
+    // sbt session open in the background for the duration of a load test.
+    TaskKey[Unit]("writeClasspath") := {
+      val conv = fileConverter.value
+      val cp = (Runtime / fullClasspathAsJars).value
+        .map(e => conv.toPath(e.data).toString)
+        .mkString(java.io.File.pathSeparator)
+      val out = target.value / "sidecar-scala.classpath"
+      IO.write(out, cp)
+      streams.value.log.info(s"wrote runtime classpath to $out")
+    }
+  )
+
+// The Scala Native build: the SAME shared/ sources, linked to a standalone binary. Artifact names
+// are spelled out (`_native0.5_3`) because sbt 2.0 no longer supplies `%%%` — the same reason
+// protocolCoreJS names its `_sjs1_3` artifacts explicitly.
+lazy val sidecarScalaNative = (project in file("sidecar-scala-native"))
+  .enablePlugins(ScalaNativePlugin)
+  .settings(http4sGrpcPluginSettings)
+  .settings(
+    name := "sidecar-scala-native",
+    scalacOptions ++= Seq("-deprecation", "-feature"),
+    // munit's Native build is compiled against test-interface 0.5.10 while the plugin here is
+    // 0.5.12. That is a patch bump inside 0.5.x, which early-semver treats as compatible; without
+    // saying so, sbt's strict eviction check fails the build outright.
+    libraryDependencySchemes +=
+      "org.scala-native" % "test-interface_native0.5_3" % VersionScheme.EarlySemVer,
+    // Benchmark-grade link settings. The defaults are NOT a fair comparison against release-mode
+    // Rust and a JIT-warmed JVM, and both defaults bite hard here:
+    //
+    //   * debug mode skips the optimiser entirely ("Optimizing (debug mode)" in the link log);
+    //   * multithreading is auto-DETECTED, and the detector saw no `java.lang.Thread` use in
+    //     initial class loading, so it linked a SINGLE-THREADED binary — "Multithreading support
+    //     will be disabled to improve performance". A cats-effect server on one core against a JVM
+    //     on all of them is not a runtime comparison, it is a core-count comparison.
+    //
+    // `releaseFast` rather than `releaseFull`: full LTO multiplies link time for a benchmark whose
+    // hot loop is a byte scan the optimiser handles well either way.
+    nativeConfig ~= { c =>
+      c.withMode(scala.scalanative.build.Mode.releaseFast)
+        .withMultithreading(true)
+        .withGC(
+          scala.scalanative.build.GC.commix
+        ) // parallel GC; immix is the single-threaded default
+    },
+    Compile / PB.protoSources := sidecarProtoSources.value,
+    Compile / PB.targets := sidecarPbTargets.value,
+    Compile / unmanagedSourceDirectories := sidecarScalaSharedSources.value,
+    Test / unmanagedSourceDirectories := Seq(
+      file("sidecar-scala") / "shared" / "src" / "test" / "scala"
+    ),
+    libraryDependencies ++= Seq(
+      // the `protobuf` config artifact only supplies .proto files to protoc, so the JVM one is right
+      "com.thesamet.scalapb" %% "scalapb-runtime" % V.scalapb % "protobuf",
+      "com.thesamet.scalapb" % s"scalapb-runtime_native0.5_3" % V.scalapb,
+      "org.http4s" % "http4s-grpc_native0.5_3" % V.http4sGrpc,
+      "org.http4s" % "http4s-ember-server_native0.5_3" % V.http4s,
+      "org.http4s" % "http4s-ember-client_native0.5_3" % V.http4s,
+      "org.typelevel" % "log4cats-noop_native0.5_3" % V.log4cats,
+      "org.typelevel" % "cats-effect_native0.5_3" % V.catsEffect,
+      "org.scalameta" % "munit_native0.5_3" % V.munit % Test,
+      "org.typelevel" % "munit-cats-effect_native0.5_3" % V.munitCatsEffect % Test
+    ),
+    Test / testFrameworks := Seq(new TestFramework("munit.Framework"))
+  )
+
+// The Gatling load driver. Depends on `transport` for the ScalaPB stubs that carry grpc-java
+// MethodDescriptors (the gRPC simulation needs them) — the same generated contract the Scala
+// server implements, so both simulations speak one .proto.
+//
+// No `gatling-sbt` plugin: it has no sbt 2 build. Gatling is launched through its own
+// `io.gatling.app.Gatling` entry point by `bench/Run`, which is all the plugin does anyway.
+lazy val bench = (project in file("bench"))
+  .dependsOn(transport)
+  .settings(
+    name := "bench",
+    scalacOptions ++= Seq("-deprecation", "-feature"),
+    publish / skip := true,
+    // Gatling 3.13.5 is Scala 2.13-compiled and pulls `scala-collection-compat_2.13`, while
+    // ScalaPB's Scala 3 artifacts (via `transport`) pull `_3`. sbt refuses a classpath carrying
+    // both suffixes of one module. They provide the same `scala.collection.compat` shims, so we
+    // drop the 2.13 copy and let the _3 one serve both — verified by actually running a simulation,
+    // not just by compiling.
+    excludeDependencies += ExclusionRule("org.scala-lang.modules", "scala-collection-compat_2.13"),
+    run / fork := true,
+    // Gatling reaches into java.lang internals to intern strings in its stats writer; on a modern
+    // JDK that throws `IllegalAccessException: module java.base does not open java.lang` and the
+    // run crashes before a single request is sent.
+    run / javaOptions ++= Seq(
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED"
+    ),
+    // Gatling writes reports relative to the working directory; keep them out of the repo root.
+    run / baseDirectory := (ThisBuild / baseDirectory).value / "bench",
+    libraryDependencies ++= Seq(
+      // 3.13.5 artifacts are UNSUFFIXED but Scala 2.13-compiled; Scala 3 consumes them directly.
+      "io.gatling" % "gatling-app" % V.gatling,
+      "io.gatling" % "gatling-core" % V.gatling,
+      "io.gatling" % "gatling-http" % V.gatling,
+      "io.gatling" % "gatling-charts" % V.gatling,
+      // The chart RENDERER, and it lives under a different group id (`io.gatling.highcharts`).
+      // Without it Gatling runs the simulation fine and then dies generating the report with
+      // "Couldn't find a ComponentLibrary implementation" — after the load is already over.
+      "io.gatling.highcharts" % "gatling-charts-highcharts" % V.gatling,
+      // FIRST-PARTY gRPC support (grpc-netty under the hood) — not a third-party plugin.
+      "io.gatling" % "gatling-grpc" % V.gatling
+    )
+  )
+
 lazy val root = (project in file("."))
-  .aggregate(protocolCore, protocolCoreJS, crypto, anonymity, server, transport)
+  .aggregate(protocolCore, protocolCoreJS, crypto, anonymity, server, transport, sidecarScala, bench)
   .settings(name := "metadata-messenger", publish / skip := true)
 
 // CI's JVM job runs `testJvm` (the Scala.js job covers protocolCoreJS under Node, so it is excluded
@@ -355,5 +598,5 @@ lazy val root = (project in file("."))
 // JVM module is added — co-located here, next to the aggregate, so it is hard to miss.
 addCommandAlias(
   "testJvm",
-  ";protocolCore/test ;crypto/test ;anonymity/test ;server/test ;transport/test"
+  ";protocolCore/test ;crypto/test ;anonymity/test ;server/test ;transport/test ;sidecarScala/test"
 )
